@@ -383,12 +383,7 @@ int main (int argc, char *argv[])
         exit(4);
 	}
 
-    /* Lock all the memory space which has been allocated from the
-       user initialization code. We leave MCL_FUTURE in the hands of
-       the user, since use of mapped I/O memory might require
-       decoupling the locking operations as follows:
-       mlockall(MCL_CURRENT) + mmap() + mlockall(MCL_FUTURE). */
-    mlockall(MCL_CURRENT);
+    mlockall(MCL_CURRENT|MCL_FUTURE);
 
     sa.sa_handler = &xnarch_restart_handler;
     sigemptyset(&sa.sa_mask);
